project/stage/testing/semantic/semantic_tests/accept/simple_calculator.ul
void main() {
    int c;
    c = mult(sum(2,2),2);
    if (true) {
        println "Finished calculating";
    } else {
        println "Should not get in here";
    }
}

int sum(int a, int b) {
    int sum;
    sum = a + b;
    return 0;
}

int mult(int a, int b) {
    int result;
    result = a * b;
    return 0;
}
