project/stage/testing/semantic/semantic_tests/reject/not_func_call.ul
void main() {
    int a;
    a();
}

void foo(int a, float b) {
    print a;
    print b;
}
